--- a/app/src/main/res/layout/layout_settings_item0.xml
+++ b/app/src/main/res/layout/layout_settings_item0.xml
@@ -10,6 +10,7 @@
         android:layout_gravity="center_vertical" />
 
     <LinearLayout
+        android:id="@+id/lLayout_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
