--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -94,16 +94,16 @@
         </item>
     </style>
 
-    <style name="MyRadioButton" parent="Theme.AppCompat.Light">
-        <item name="colorControlNormal">@android:color/holo_blue_dark</item>
-        <item name="colorControlActivated">@android:color/holo_green_dark</item>
-    </style>
-
     <style name="video_opt_seek_bar" parent="Widget.AppCompat.SeekBar">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
         <item name="android:progressDrawable">@drawable/media_seek_bar_drawable</item>
         <item name="android:thumb">@drawable/seek_bar_dot_white</item>
+    </style>
+
+    <style name="RadioButtonStyle" parent="Theme.AppCompat.Light">
+        <item name="colorControlNormal">@color/color_4b9fd5</item>
+        <item name="colorControlActivated">@color/color_4b9fd5</item>
     </style>
 </resources>
