1.我的亲友头像保存bug 2.亲友扫一扫添加无效二维码提示 3.解决我的界面由于Toast崩溃 4.通过亲友列表分享设备过滤分享的设备 5.帮组反馈界面头像变形 6亲友修改备注不允许输入空格 7.分享设备前添加网络判断 8.亲友详情备注名修改 9.无法通过通讯录分享

--- a/app/src/main/res/layout/fragment_setup_pwd.xml
+++ b/app/src/main/res/layout/fragment_setup_pwd.xml
@@ -32,6 +32,7 @@
         android:outAnimation="@anim/slide_out_left">
 
         <LinearLayout
+            android:id="@+id/ll_input_pwd_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -103,10 +104,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/y37"
                 android:text="@string/CARRY_ON" />
-
         </LinearLayout>
-
-
     </ViewSwitcher>
 
 </LinearLayout>
