--- a/app/src/main/res/layout/fragment_mine_info_mailbox.xml
+++ b/app/src/main/res/layout/fragment_mine_info_mailbox.xml
@@ -65,6 +65,8 @@
                 android:hint="@string/EMAIL_1"
                 android:textCursorDrawable="@drawable/search_friend_cursor_color"
                 android:maxLength="65"
+                android:singleLine="true"
+                android:ellipsize="start"
                 android:textColor="@color/color_333333"
                 android:textSize="@dimen/sp16" />
 
