--- a/app/src/main/res/layout/fragment_mine_info_set_password.xml
+++ b/app/src/main/res/layout/fragment_mine_info_set_password.xml
@@ -39,7 +39,7 @@
                 android:id="@+id/iv_mine_personal_setpassword_bind"
                 android:padding="@dimen/x15"
                 android:layout_alignParentRight="true"
-                android:clickable="true"
+                android:clickable="false"
                 android:layout_centerVertical="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
