--- a/app/src/main/res/layout/fragment_mine_userinfo_lookbigimagehead.xml
+++ b/app/src/main/res/layout/fragment_mine_userinfo_lookbigimagehead.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent">
 
     <ImageView
+        android:src="@drawable/icon_mine_head_normal"
         android:layout_gravity="center_vertical"
         android:id="@+id/iv_userinfo_big_image"
         android:layout_width="match_parent"
