长按钮，圆角适配

--- a/app/src/main/res/drawable/un_bind_device_btn_press_shape.xml
+++ b/app/src/main/res/drawable/un_bind_device_btn_press_shape.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="rectangle">
         <solid android:color="@color/color_f4f4f4" />
-        <corners android:radius="63px" />
+        <corners android:radius="@dimen/x63" />
 </shape>
