--- a/app/src/main/res/drawable/long_btn_bg_shape_white.xml
+++ b/app/src/main/res/drawable/long_btn_bg_shape_white.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item >
+    <item>
         <shape android:shape="rectangle">
-            <stroke android:width="2px" android:color="@color/color_d8d8d8"/>
-            <corners android:radius="63px" />
+            <stroke
+                android:width="2px"
+                android:color="@color/color_d8d8d8" />
+            <corners android:radius="@dimen/x63" />
         </shape>
     </item>
 </layer-list>
