--- a/app/src/main/res/drawable/un_bind_device_btn_normal_shape.xml
+++ b/app/src/main/res/drawable/un_bind_device_btn_normal_shape.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-        <solid android:color="@color/color_white" />
-        <stroke android:width="2px" android:color="@color/color_d8d8d8"/>
-        <corners android:radius="63px" />
+    <solid android:color="@color/color_white" />
+    <stroke
+        android:width="2px"
+        android:color="@color/color_d8d8d8" />
+    <corners android:radius="@dimen/x63" />
 </shape>
